@startuml DB_Model
title Entity Model
!theme Dracula from Dokumentation\Scenarier\Baner\DevelopmentView\DCD\

entity Item{
    + Id : int <<baseentity>>
    + name :  string <<baseentity>>
    + Description : string?
    + Image : string?
    + IsSign : bool
    + TrackItems : ICollection<TrackItem>?

}
entity TrackItem{
    + Id : int
    + Item : Item? <<fk>>
    + ItemId : int
    + Track : Track? <<fk>>
    + TrackId : int
    + X : float?
    + Y : float?
    + Order : int?
}
entity Track {
    + Id : int <<baseentity>>
    + name :  string <<baseentity>>
    + Category : string?
    + TrackItems : Collection<TrackItem>?
}

Item ||--|{ TrackItem 
TrackItem ||--||Track


@enduml